<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:background="#ffefebe7"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:paddingTop="10dp" >

    <ScrollView
        android:id="@+id/scrollViewOptions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:id="@+id/linearLayoutOptions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textViewCD"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="倒计时（单位：秒）" />

            <TableRow
                android:id="@+id/tableRow1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/more_item_press"
                android:gravity="fill_vertical" >

                <Switch
                    android:id="@+id/switchCD"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/cn_disabled" />

                <EditText
                    android:id="@+id/editTextCD"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:ems="6"
                    android:enabled="false"
                    android:inputType="number"
                    android:selectAllOnFocus="true" >

                </EditText>
            </TableRow>

            <TextView
                android:id="@+id/textViewPerson"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="测试员：" />

            <TableRow
                android:id="@+id/tableRow2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/more_item_press" >

                <Spinner
                    android:id="@+id/spinnerUser"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_weight="80"
                    android:background="@drawable/more_item_press"
                    android:entries="@array/NullArray" />

                <Button
                    android:id="@+id/buttonAddUser"
                    android:layout_width="60dp"
                    android:layout_height="match_parent"
                    android:background="@drawable/button_add_user"
                    android:onClick="on_buttonAddUser_clicked" />

            </TableRow>

            <TableRow
                android:id="@+id/tableRow3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp" >

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="50"
                    android:text="动作类型" />

                <TextView
                    android:id="@+id/textViewPosition"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="50"
                    android:text="放置位置" />

            </TableRow>

            <TableRow
                android:id="@+id/tab4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <Spinner
                    android:id="@+id/spinnerActTypes"
                    android:layout_height="wrap_content"
                    android:layout_weight="50"
                    android:background="@drawable/more_item_press"
                    android:entries="@array/actionTypes" />

                <Spinner
                    android:id="@+id/spinnerPosition"
                    android:layout_height="wrap_content"
                    android:layout_weight="50"
                    android:background="@drawable/more_item_press"
                    android:entries="@array/devicePosition" />

            </TableRow>

            <TextView
                android:id="@+id/TextView01"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_weight="50"
                android:text="采样动作：" />

            <Spinner
                android:id="@+id/spinnerActions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/more_item_press"
                android:entries="@array/actDrive" />

        </LinearLayout>
    </ScrollView>

    <ToggleButton
        android:id="@+id/toggleButtonSampling"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/scrollViewOptions"
        android:layout_marginTop="20dp"
        android:textOff="@string/samplingOff"
        android:textOn="@string/samplingOn" />

</RelativeLayout>